# KenazEngine

./: CMakeLists.txt  README.md  map.txt  map0.txt  map1.txt  map2.txt  map3.txt  platformer.txt  platformer_bg1.txt  platformer_bg2.txt  platformer_bg3.txt
Engine/: CMakeLists.txt
Engine/include/: JumpPhysics.h
Engine/include/Engine/: Camera.h  Joystick.h  KenazEngine.h  Map.h  Overlay.h  Player.h  Texture.h  Vector2.h
Engine/src/: Camera.cpp  Joystick.cpp  KenazEngine.cpp  Map.cpp  Overlay.cpp  Player.cpp  Texture.cpp
Game/: Ball.cpp  Ball.h  BallManager.cpp  BallManager.h  CMakeLists.txt  Maze.cpp  Vector2.h  game.cpp  main.cpp
Game/Scenes/: balls_bouncing.cpp  game.cpp  maze_level.cpp
Game/Scripts/: BallManager.h  IconsUI.h  Indicator.h  Maze.h
Game/Scripts/src/: Ball.cpp  BallManager.cpp  IconsUI.cpp  Indicator.cpp  Maze.cpp
